force-app/main/default/objects/InsurancePolicy/fields/Actual_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Project_Value__c</fullName>
    <label>Actual Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>