force-app/main/default/objects/InsurancePolicy/fields/Aggregate_Limit_of_Liability_Currency__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit_of_Liability_Currency__c</fullName>
    <label>Aggregate Limit of Liability - Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>