force-app/main/default/objects/InsurancePolicy/fields/Attach_to_master_record_5__c.field-meta.xml
<CustomField>
    <fullName>Attach_to_master_record_5__c</fullName>
    <description>##Conga created button:00bf0000000sID9</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a0xf000000Wig4HAAR&quot; + 
&quot;&amp;qmode=Attachments&quot;</formula>
    <label>Attach to master record 5</label>
    <type>Text</type>
</CustomField>