force-app/main/default/objects/InsurancePolicy/fields/Authorized_Premium__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Premium__c</fullName>
    <inlineHelpText>Authorized premium of the policy</inlineHelpText>
    <label>Authorized Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>