force-app/main/default/objects/InsurancePolicy/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual who will receive certificate &amp; pay invoice</inlineHelpText>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies (Billing Contact)</relationshipLabel>
    <relationshipName>Policies2</relationshipName>
    <type>Lookup</type>
</CustomField>