force-app/main/default/objects/InsurancePolicy/fields/broker_billing_address__c.field-meta.xml
<CustomField>
    <fullName>broker_billing_address__c</fullName>
    <formula>Brokerage__r.BillingCity  &amp;&quot;, &quot; &amp;
 Brokerage__r.BillingCity &amp; &quot;, &quot; &amp;
 Brokerage__r.BillingState &amp; &quot;, &quot; &amp;
 Brokerage__r.BillingPostalCode &amp;&quot;, &quot; &amp;
 Brokerage__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>broker billing address</label>
    <type>Text</type>
</CustomField>