force-app/main/default/objects/InsurancePolicy/fields/Broker_User__c.field-meta.xml
<CustomField>
    <fullName>Broker_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>