force-app/main/default/objects/InsurancePolicy/fields/Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Brokerage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Brokerage firm who is managing the policy</inlineHelpText>
    <label>Brokerage</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brokerage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referred Policies</relationshipLabel>
    <relationshipName>Insurance_Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>