force-app/main/default/objects/InsurancePolicy/fields/Cancel_Firm_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Firm_Certificate__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a0xf000000Wig4HAAR&quot; + 
&quot;&amp;csvisible=1&quot; + 
&quot;&amp;csrecipient1=&quot; +  Contact__r.Id  +
&quot;&amp;csrecipient2=&quot; +  Broker__r.Id +
&quot;&amp;csrole2=CC&quot; + 
&quot;&amp;csrecipient3=&quot; + OwnerId +
&quot;&amp;csrole3=CC&quot; + 
&quot;&amp;qmode=congasign&quot; +
&quot;&amp;SC1=SalesforceFile&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cancel Firm Certificate</label>
    <type>Text</type>
</CustomField>