force-app/main/default/objects/InsurancePolicy/fields/Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Amount__c</fullName>
    <inlineHelpText>Cancellation Amount of the Policy</inlineHelpText>
    <label>Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>