force-app/main/default/objects/InsurancePolicy/fields/Cancellation_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Policies (Cancellation Invoice)</relationshipLabel>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>