force-app/main/default/objects/InsurancePolicy/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Category of insurance certificate</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Insurance Certificate</fullName>
            </value>
            <value>
                <fullName>Firm Rider Insurance Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>