force-app/main/default/objects/InsurancePolicy/fields/CGL_Queries_2__c.field-meta.xml
<CustomField>
    <fullName>CGL_Queries_2__c</fullName>
    <formula>&quot;[CGLE02701]a0pf0000003TNQxAAO,[CGLE02801]a0pf0000003TNQyAAO,[CGLE02901]a0pf0000003TNQzAAO, [CGLE03001]a0pf0000003TNR0AAO,[CGLE03101]a0pf0000003TNR1AAO,[CGLE03201]a0pf0000003TNR2AAO,[CGLE03301]a0pf0000003TNR3AAO,[CGLE03401]a0pf0000003TNR4AAO,[CGLE03501]a0pf0000003TNR5AAO,[CGLE03601]a0pf0000003TNR6AAO,[CGLE03701]a0pf0000003TNR7AAO,[CGLE03801]a0pf0000003TNR8AAO,[CGLE03901]a0pf0000003TNR9AAO,[CGLE04001]a0pf0000003TNRAAA4,[CGLE04101]a0pf0000003TNRBAA4,[CGLE04201]a0pf0000003TNRCAA4,[CGLE04301]a0pf0000003TNRDAA4,[CGLE04401]a0pf0000003TNREAA4,[CGLE04501]a0pf0000003TNRFAA4,[CGLE04601]a0pf0000003TNRGAA4,[CGLE04701]a0pf0000003TNRHAA4,[CGLE04801]a0pf0000003TNRIAA4,[CGLE04901]a0pf0000003TNRJAA4,[CGLE05001]a0pf0000003TNRKAA4,[CGLE05101]a0pf0000003TNRLAA4,[CGLE05201]a0pf0000003TNRMAA4,[CGLE05301]a0pf0000003TNRNAA4,[CGLE05401]a0pf0000003TNROAA4&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGL Queries 2</label>
    <type>Text</type>
</CustomField>