force-app/main/default/objects/InsurancePolicy/fields/CGL_Queries__c.field-meta.xml
<CustomField>
    <fullName>CGL_Queries__c</fullName>
    <formula>&quot;&amp;queryid=&quot; + &quot;[PIns]a0pf0000003XMDlAAO,[HCFPPD]a0pf0000003XbGXAA0,[PUI]a0pf0000003TWUxAAO,[PPE]a0pf0000003ZZ2qAAG,[PPDRA]a0pf0000003TXybAAG,[PPDCov]a0pf0000003TY9jAAG,[COCQPD]a0pf0000003XPQxAAO,[HCC]a0pf0000003ZjvVAAS,[PPDSL]a0pf0000003TYLLAA4,[PPDExt]a0pf0000003TYKNAA4,[AUTE00101]a0pf0000003TNQSAA4,[AUTE00201]a0pf0000003TNQTAA4,[AUTE00301]a0pf0000003TNQUAA4,[AUTE00401]a0pf0000003TNQVAA4,[AUTE00501]a0pf0000003TNQWAA4,[AUTW00101]a0pf0000003TNQRAA4,[CGLE00101]a0pf0000003TNQXAA4,[CGLE00201]a0pf0000003TNQYAA4,[CGLE00301]a0pf0000003TNQZAA4,[CGLE00401]a0pf0000003TNQaAAO,[CGLE00501]a0pf0000003TNQbAAO,[CGLE00601]a0pf0000003TNQcAAO,[CGLE00701]a0pf0000003TNQdAAO,[CGLE00801]a0pf0000003TNQeAAO,[CGLE00901]a0pf0000003TNQfAAO,[CGLE01001]a0pf0000003TNQgAAO,[CGLE01101]a0pf0000003TNQhAAO,[CGLE01201]a0pf0000003TNQiAAO,[CGLE01301]a0pf0000003TNQjAAO,[CGLE01401]a0pf0000003TNQkAAO,[CGLE01501]a0pf0000003TNQlAAO,[CGLE01601]a0pf0000003TNQmAAO,[CGLE01701]a0pf0000003TNQnAAO,[CGLE01801]a0pf0000003TNQoAAO,[CGLE01901]a0pf0000003TNQpAAO,[CGLE02001]a0pf0000003TNQqAAO,[CGLE02101]a0pf0000003TNQrAAO,[CGLE02201]a0pf0000003TNQsAAO,[CGLE02301]a0pf0000003TNQtAAO,[CGLE02401]a0pf0000003TNQuAAO,[CGLE02501]a0pf0000003TNQvAAO,[CGLE02601]a0pf0000003TNQwAAO&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGL Queries</label>
    <type>Text</type>
</CustomField>