force-app/main/default/objects/InsurancePolicy/fields/COC_Queries__c.field-meta.xml
<CustomField>
    <fullName>COC_Queries__c</fullName>
    <formula>IF( CONTAINS(Product.ProductCode ,&apos;COC&apos;),&quot;&amp;queryid=[PPDExt]a0pf0000003TYKNAA4,[PIns]a0pf0000003XMDlAAO,[HCFPPD]a0pf0000003XbGXAA0,[PUI]a0pf0000003TWUxAAO,[PPE]a0pf0000003ZZ2qAAG,[PPDRA]a0pf0000003TXybAAG,[PPDCov]a0pf0000003TY9jAAG,[COCQPD]a0pf0000003XPQxAAO,[HCC]a0pf0000003ZjvVAAS,[PPDSL]a0pf0000003TYLLAA4,[PPDMR]a0pf0000003ZmGfAAK,[COCE00101]a0pf0000003TNP0AAO,[COCE00201]a0pf0000003TNP1AAO,[COCE00301]a0pf0000003TNP2AAO,[COCE00401]a0pf0000003TNP3AAO,[COCE00501]a0pf0000003TNP4AAO,[COCE00601]a0pf0000003TNP5AAO,[COCE00701]a0pf0000003TNP6AAO,[COCE00801]a0pf0000003TNP7AAO,[COCE00901]a0pf0000003TNP8AAO,[COCE01001]a0pf0000003TNP9AAO,[COCE01101]a0pf0000003TNPAAA4,[COCE01201]a0pf0000003TNPBAA4,[COCE01301]a0pf0000003TNPCAA4,[COCE01401]a0pf0000003TNPDAA4,[COCE01501]a0pf0000003TNPEAA4,[COCE01601]a0pf0000003TNPFAA4,[COCE01701]a0pf0000003TNPGAA4,[COCE01801]a0pf0000003TNPHAA4,[COCE01901]a0pf0000003TNPIAA4,[COCE02001]a0pf0000003TNPJAA4,[COCE02101]a0pf0000003TNPKAA4,[COCE02201]a0pf0000003TNPLAA4,[COCE02301]a0pf0000003TNPMAA4,[COCE02401]a0pf0000003TNPNAA4,[COCE02501]a0pf0000003TNPOAA4,[COCE02601]a0pf0000003TNPPAA4,[COCE02701]a0pf0000003TNPQAA4,[COCE02801]a0pf0000003TNPRAA4,[COCW00101]a0pf0000003TNOzAAO,[COCE99501]a0pf0000003TNPSAA4,[COCE99601]a0pf0000003TNPTAA4,[COCE99701]a0pf0000003TNPUAA4,[COCE99801]a0pf0000003TNPVAA4,[COCE99901]a0pf0000003TNPWAA4&quot;,&quot;&quot;)</formula>
    <label>COC Queries</label>
    <type>Text</type>
</CustomField>