force-app/main/default/objects/InsurancePolicy/fields/COC_Queries_ID_for_Conga_Trigger__c.field-meta.xml
<CustomField>
    <fullName>COC_Queries_ID_for_Conga_Trigger__c</fullName>
    <formula>&quot;&amp;QueryStringField=CGL_Queries__c&quot; + &quot;,&quot; + CGL_Queries_2__c</formula>
    <label>COC Queries ID for Conga T</label>
    <type>Text</type>
</CustomField>