force-app/main/default/objects/InsurancePolicy/fields/COC_Template_IDS__c.field-meta.xml
<CustomField>
    <fullName>COC_Template_IDS__c</fullName>
    <formula>Template_Ids__c &amp;  Template_Ids2__c</formula>
    <label>COC Template IDS</label>
    <type>Text</type>
</CustomField>