force-app/main/default/objects/InsurancePolicy/fields/COC_WrapU_Trigger_Send_via_Conga_Sig__c.field-meta.xml
<CustomField>
    <fullName>COC_WrapU_Trigger_Send_via_Conga_Sig__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=&quot; + Template_Ids__c &amp; Template_Ids2__c &amp; Template_Ids3__c +
&quot;&amp;QueryStringField=  Wrap_Up_Queries__c &quot; +
&quot;&amp;ofn=&quot; + Name +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;qmode=congasign&quot; + &quot;&amp;csvisible=1&quot; + &quot;&amp;csrecipient1=&quot; + Broker__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COC [WrapU] Trigger - Send via Conga Sig</label>
    <type>Text</type>
</CustomField>