force-app/main/default/objects/InsurancePolicy/fields/Company_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo_URL__c</fullName>
    <label>Company Logo URL</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>