force-app/main/default/objects/InsurancePolicy/fields/Completed_Operations_Period__c.field-meta.xml
<CustomField>
    <fullName>Completed_Operations_Period__c</fullName>
    <label>Completed Operations Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>