force-app/main/default/objects/InsurancePolicy/fields/Conga_Output_Mode__c.field-meta.xml
<CustomField>
    <fullName>Conga_Output_Mode__c</fullName>
    <formula>IF(ISPICKVAL(Conga_Transaction__c , &quot;Send with Conga Sign&quot;),

&quot;&amp;qmode=congasign&quot; + &quot;&amp;csvisible=1&quot; + &quot;&amp;csrecipient1=&quot; +  Broker__r.Id, 

&quot;&amp;SC0=1&quot; + &quot;&amp;SC1=SalesforceFile&quot; + &quot;&amp;QMode=SalesforceFile&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Output Mode</label>
    <type>Text</type>
</CustomField>