force-app/main/default/objects/InsurancePolicy/fields/Conga_Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>Conga_Sign_Status__c</fullName>
    <label>Conga Sign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signed Firm Certificate Cancellation</fullName>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>