force-app/main/default/objects/InsurancePolicy/fields/Conga_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Conga_Transaction__c</fullName>
    <label>Conga Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send with Conga Sign</fullName>
            </value>
            <value>
                <fullName>Attach to Master Record</fullName>
                <default>true</default>
                <label>Attach to Master Record</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>