force-app/main/default/objects/InsurancePolicy/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies (Contact)</relationshipLabel>
    <relationshipName>Policies1</relationshipName>
    <type>Lookup</type>
</CustomField>