force-app/main/default/objects/InsurancePolicy/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Days between policy effective date and policy cancellation date.</description>
    <formula>TODAY() -   DATEVALUE(EffectiveDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between policy effective date and policy cancellation date.</inlineHelpText>
    <label>Active Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>