force-app/main/default/objects/InsurancePolicy/fields/Days_Active__c.field-meta.xml
<CustomField>
    <fullName>Days_Active__c</fullName>
    <description>Days difference between policy active and cancelled.</description>
    <inlineHelpText>Days difference between policy active and cancelled.</inlineHelpText>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>