force-app/main/default/objects/InsurancePolicy/fields/Description_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Project__c</fullName>
    <label>Description of Project</label>
    <type>TextArea</type>
</CustomField>