force-app/main/default/objects/InsurancePolicy/fields/Eff__c.field-meta.xml
<CustomField>
    <fullName>Eff__c</fullName>
    <formula>DATEVALUE(EffectiveDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eff date</label>
    <type>Date</type>
</CustomField>