force-app/main/default/objects/InsurancePolicy/fields/ERP_Amount__c.field-meta.xml
<CustomField>
    <fullName>ERP_Amount__c</fullName>
    <inlineHelpText>Amount paid to purchase ERP</inlineHelpText>
    <label>ERP Purchased  Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>