force-app/main/default/objects/InsurancePolicy/fields/ERP_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Expiration_Date__c</fullName>
    <inlineHelpText>Date on which the ERP will be expired</inlineHelpText>
    <label>ERP Expiration Date</label>
    <type>Date</type>
</CustomField>