force-app/main/default/objects/InsurancePolicy/fields/ERP_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ERP_Percentage__c</fullName>
    <inlineHelpText>Percentage of purchased ERP</inlineHelpText>
    <label>ERP Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>