force-app/main/default/objects/InsurancePolicy/fields/ERP_Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>ERP_Purchased_Date__c</fullName>
    <inlineHelpText>Date on which the ERP was purchased</inlineHelpText>
    <label>ERP Purchased Date</label>
    <type>Date</type>
</CustomField>