force-app/main/default/objects/InsurancePolicy/fields/Excess__c.field-meta.xml
<CustomField>
    <fullName>Excess__c</fullName>
    <formula>IF( Product.ProductCode == &apos;EL&apos;,&quot;&amp;queryid=[PPDExt]a0pf0000003TYKNAA4,[PIns]a0pf0000003XMDlAAO,[HCFPPD]a0pf0000003XbGXAA0,[PUI]a0pf0000003TWUxAAO,[PPE]a0pf0000003ZZ2qAAG,[PPDRA]a0pf0000003TXybAAG,[PPDCov]a0pf0000003TY9jAAG,[COCQPD]a0pf0000003XPQxAAO,[HCC]a0pf0000003ZjvVAAS,[PPDSL]a0pf0000003TYLLAA4,[PPDMR]a0pf0000003ZmGfAAK,[XCLE00101]a0pf0000003TNSbAAO,[XCLE00201]a0pf0000003TNScAAO,[XCLE00301]a0pf0000003TNSdAAO,[XCLE00401]a0pf0000003TNSeAAO,[XCLE00501]a0pf0000003TNSfAAO,[XCLE00601]a0pf0000003TNSgAAO,[XCLE00701]a0pf0000003TNShAAO,[XCLE00801]a0pf0000003TNSiAAO,[XCLE00901]a0pf0000003TNSjAAO,[XCLE01001]a0pf0000003TNSkAAO,[XCLE01101]a0pf0000003TNSlAAO,[XCLE01201]a0pf0000003TNSmAAO,[XCLE01301]a0pf0000003TNSnAAO,[XCLE01401]a0pf0000003TNSoAAO,[XCLE01501]a0pf0000003TNSpAAO,[XCLE01601]a0pf0000003TNSqAAO,[XCLE01701]a0pf0000003TNSrAAO,[XCLE01801]a0pf0000003TNSsAAO,[XCLE01901]a0pf0000003TNStAAO,[XCLE02001]a0pf0000003TNSuAAO,[XCLE02101]a0pf0000003TNSvAAO,[XCLE02201]a0pf0000003TNSwAAO,[XCLE02301]a0pf0000003TNSxAAO,[XCLE02401]a0pf0000003TNSyAAO,[XCLE02501]a0pf0000003TNSzAAO,[XCLE02601]a0pf0000003TNT0AAO,[XCLE02701]a0pf0000003TNT1AAO,[XCLE02801]a0pf0000003TNT2AAO,[XCLE99701]a0pf0000003TNT5AAO,[XCLE99801]a0pf0000003TNT4AAO,[XCLE99901]a0pf0000003TNT3AAO,[XCLW00101]a0pf0000003TNSaAAO&quot;, &quot;&quot;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excess</label>
    <type>Text</type>
</CustomField>