force-app/main/default/objects/InsurancePolicy/fields/Excess_WrapUp_Queries__c.field-meta.xml
<CustomField>
    <fullName>Excess_WrapUp_Queries__c</fullName>
    <formula>IF( Product.ProductCode == &apos;EWUL&apos; ,&quot;&amp;queryid=[PPDExt]a0pf0000003TYKNAA4,[PIns]a0pf0000003XMDlAAO,[HCFPPD]a0pf0000003XbGXAA0,[PUI]a0pf0000003TWUxAAO,[PPE]a0pf0000003ZZ2qAAG,[PPDRA]a0pf0000003TXybAAG,[PPDCov]a0pf0000003TY9jAAG,[COCQPD]a0pf0000003XPQxAAO,[HCC]a0pf0000003ZjvVAAS,[PPDSL]a0pf0000003TYLLAA4,[PPDMR]a0pf0000003ZmGfAAK,[XWUE00101]a0pf0000003TNQ0AAO,[XWUE00201]a0pf0000003TNQ1AAO,[XWUE00301]a0pf0000003TNQ2AAO,[XWUE00401]a0pf0000003TNQ3AAO,[XWUE00501]a0pf0000003TNQ4AAO,[XWUE00601]a0pf0000003TNQ5AAO,[XWUE00701]a0pf0000003TNQ6AAO,[XWUE00801]a0pf0000003TNQ7AAO,[XWUE00901]a0pf0000003TNQ8AAO,[XWUE01001]a0pf0000003TNQ9AAO,[XWUE01101]a0pf0000003TNQAAA4,[XWUE01201]a0pf0000003TNQBAA4,[XWUE01301]a0pf0000003TNQCAA4,[XWUE01401]a0pf0000003TNQDAA4,[XWUE01501]a0pf0000003TNQEAA4,[XWUE01601]a0pf0000003TNQFAA4,[XWUE01701]a0pf0000003TNQGAA4,[XWUE01801]a0pf0000003TNQHAA4,[XWUE01901]a0pf0000003TNQIAA4,[XWUE02001]a0pf0000003TNQJAA4,[XWUE02101]a0pf0000003TNQKAA4,[XWUE02201]a0pf0000003TNQLAA4,[XWUE99601]a0pf0000003TNQPAA4,[XWUE99701]a0pf0000003TNQOAA4,[XWUE99801]a0pf0000003TNQNAA4,[XWUE99901]a0pf0000003TNQMAA4,[XWUW00101]a0pf0000003TNPzAAO,[XCLE02801]a0pf0000003TNT2AAO,[XCLE99701]a0pf0000003TNT5AAO,[XCLE99801]a0pf0000003TNT4AAO,[XCLE99901]a0pf0000003TNT3AAO,[XCLW00101]a0pf0000003TNSaAAO&quot;  , &quot;&quot;  )</formula>
    <label>Excess WrapUp Queries</label>
    <type>Text</type>
</CustomField>