force-app/main/default/objects/InsurancePolicy/fields/Exp__c.field-meta.xml
<CustomField>
    <fullName>Exp__c</fullName>
    <formula>DATEVALUE(ExpirationDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exp date</label>
    <type>Date</type>
</CustomField>