force-app/main/default/objects/InsurancePolicy/fields/Extended_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>Extended_Reporting_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ERP purchased on policy</inlineHelpText>
    <label>Purchased ERP</label>
    <referenceTo>Extended_Report_Period__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>