force-app/main/default/objects/InsurancePolicy/fields/FinServ__Household__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Insurance Policies</relationshipLabel>
    <relationshipName>HouseholdInsurancePolicies</relationshipName>
    <type>Lookup</type>
</CustomField>