force-app/main/default/objects/InsurancePolicy/fields/IBC_Code__c.field-meta.xml
<CustomField>
    <fullName>IBC_Code__c</fullName>
    <formula>NameInsured.IBC_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBC Code</label>
    <type>Text</type>
</CustomField>